--- a/fraction/config_cutvar_dstar_mb_triggercuts.json
+++ b/fraction/config_cutvar_dstar_mb_triggercuts.json
@@ -2,6 +2,21 @@
     "rawyields": {
         "inputdir": "rawyields",
         "inputfiles": [
+            "rawyields_bdtnp0.30_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.32_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.34_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.36_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.38_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.40_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.42_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.44_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.46_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.48_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.50_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.52_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.54_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.56_dstar_LHC22_LHC23.root",
+            "rawyields_bdtnp0.58_dstar_LHC22_LHC23.root",
             "rawyields_bdtnp0.60_dstar_LHC22_LHC23.root",
             "rawyields_bdtnp0.62_dstar_LHC22_LHC23.root",
             "rawyields_bdtnp0.64_dstar_LHC22_LHC23.root",
@@ -28,6 +43,21 @@
     "efficiencies": {
         "inputdir": "efficiencies",
         "inputfiles": [
+            "efficiencies_bdtnp0.30_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.32_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.34_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.36_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.38_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.40_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.42_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.44_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.46_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.48_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.50_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.52_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.54_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.56_dstar_LHC24g5_trackTuner.root",
+            "efficiencies_bdtnp0.58_dstar_LHC24g5_trackTuner.root",
             "efficiencies_bdtnp0.60_dstar_LHC24g5_trackTuner.root",
             "efficiencies_bdtnp0.62_dstar_LHC24g5_trackTuner.root",
             "efficiencies_bdtnp0.64_dstar_LHC24g5_trackTuner.root",
