--- a/fraction/config_dstar_mb.yml
+++ b/fraction/config_dstar_mb.yml
@@ -1,15 +1,15 @@
 hadron: dstar
 
 input:
-  data: inputs/sparse_dstar_LHC22_LHC23.root
-  mc: [inputs/sparse_dstar_LHC24g5_trackTuner_ptSmearing1p5.root, inputs/sparse_dstar_LHC24h1_trackTuner_ptSmearing1p5.root]
+  data: inputs/sparse_dstar_LHC22_LHC23_BDTAnalysis.root
+  mc: [inputs/sparse_dstar_LHC24g5_trackTuner_ptSmearing1p5_BDTAnalysis.root, inputs/sparse_dstar_LHC24h1_trackTuner_ptSmearing1p5_BDTAnalysis.root]
   mc_weights: [1., 2.3333] # 1 and 7./3 which approximatelly should reproduce the data 
 
 pt_mins: [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16.]
 pt_maxs: [2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16., 24.]
 
 bdt_cuts:
-  bkg: [0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06]
+  bkg: [0.01, 0.01, 0.02, 0.02, 0.07, 0.07, 0.07, 0.1, 0.1, 0.1, 0.2, 0.3]
   nonprompt: [0.20, 0.22, 0.24, 0.26, 0.28,
               0.30, 0.32, 0.34, 0.36, 0.38,
               0.40, 0.42, 0.44, 0.46, 0.48,
@@ -31,7 +31,7 @@ efficiency:
 output:
   rawyields:
     directory: rawyields
-    suffix: _dstar_LHC22_LHC23
+    suffix: _dstar_LHC22_LHC23_BDTAnalysis
   efficiencies:
     directory: efficiencies
-    suffix: _dstar_LHC24g5_LHC24h1_trackTuner_ptSmearing1p5 #LHC24g5_
+    suffix: _dstar_LHC24g5_LHC24h1_trackTuner_ptSmearing1p5_BDTAnalysis #LHC24g5_
