--- a/fraction/config_cutvar_dplus_mb.json
+++ b/fraction/config_cutvar_dplus_mb.json
@@ -2,83 +2,61 @@
     "rawyields": {
         "inputdir": "rawyields",
         "inputfiles": [
-            "rawyields_bdtnp0.30_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.32_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.34_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.36_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.38_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.40_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.42_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.44_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.46_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.48_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.50_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.52_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.54_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.56_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.58_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.60_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.62_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.64_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.66_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.68_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.70_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.72_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.74_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.76_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.78_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.80_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.82_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.84_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.86_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.88_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.90_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.92_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.94_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.96_dplus_LHC22_LHC23_full.root",
-            "rawyields_bdtnp0.98_dplus_LHC22_LHC23_full.root"
-        ],
+            "rawyields_bdtnp0.20_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.24_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.28_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.32_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.36_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.40_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.44_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.48_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.52_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.56_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.60_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.64_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.68_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.72_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.76_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.80_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.82_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.84_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.86_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.88_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.90_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.92_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.94_dplus_LHC22_LHC23_MB_full.root",
+            "rawyields_bdtnp0.96_dplus_LHC22_LHC23_MB_full.root"
+                ],
         "histoname": "hist_rawyield"
     },
     "efficiencies": {
         "inputdir": "efficiencies",
         "inputfiles": [
-            "efficiencies_bdtnp0.30_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.32_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.34_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.36_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.38_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.40_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.42_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.44_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.46_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.48_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.50_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.52_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.54_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.56_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.58_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.60_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.62_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.64_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.66_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.68_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.70_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.72_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.74_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.76_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.78_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.80_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.82_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.84_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.86_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.88_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.90_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.92_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.94_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.96_dplus_LHC24g5.root",
-            "efficiencies_bdtnp0.98_dplus_LHC24g5.root"
-        ],
+            "efficiencies_bdtnp0.20_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.24_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.28_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.32_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.36_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.40_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.44_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.48_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.52_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.56_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.60_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.64_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.68_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.72_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.76_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.80_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.82_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.84_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.86_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.88_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.90_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.92_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.94_dplus_LHC24g5_LHC24h1_new.root",
+            "efficiencies_bdtnp0.96_dplus_LHC24g5_LHC24h1_new.root"
+                ],
         "histonames": {
             "prompt": "hist_eff_prompt",
             "nonprompt": "hist_eff_nonprompt"
@@ -90,7 +68,7 @@
     "central_efficiency": {
         "computerawfrac": true,
         "inputdir": "efficiencies",
-        "inputfile": "efficiencies_nocutnp_dplus_LHC24g5.root",
+        "inputfile": "efficiencies_nocutnp_dplus_LHC24g5_LHC24h1_new.root",
         "histonames": {
             "prompt": "hist_eff_prompt",
             "nonprompt": "hist_eff_nonprompt"
@@ -98,6 +76,6 @@
     },
     "output": {
         "directory": "cutvariation",
-        "file": "cutvar_dplus_pp13dot6tev_MB.root"
+        "file": "cutvar_dplus_pp13dot6tev_MB_new.root"
     }
 }
