--- a/fraction/config_dplus_mb.yml
+++ b/fraction/config_dplus_mb.yml
@@ -1,8 +1,8 @@
 hadron: dplus
 
 input:
-  data: inputs/sparse_dplus_full.root
-  mc: [inputs/sparse_dplus_LHC24g5.root, inputs/sparse_dplus_LHC24h1.root]
+  data: inputs/sparse_dplus_LHC22_LHC23_MB_full.root
+  mc: [inputs/sparse_dplus_MBcuts_LHC24g5_train297397.root, inputs/sparse_dplus_MBcuts_LHC24h1_train298922.root]
   mc_weights: [1., 2.3333] # if only one file ignored
 
 pt_mins: [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16.]
@@ -21,8 +21,8 @@ bdt_cuts:
               0.90, 0.92, 0.94, 0.96, 0.98] # values for cut-variation method (pT differential?)
 
 fit:
-  mass_mins: [1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.70, 1.67]
-  mass_maxs: [1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 2.05, 2.15]
+  mass_mins: [1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.70, 1.70]
+  mass_maxs: [1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 2.05, 2.05]
   sgn_funcs: ["gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian"]
   bkg_funcs: ["chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3"]
 
@@ -35,4 +35,4 @@ output:
     suffix: _dplus_LHC22_LHC23_full
   efficiencies:
     directory: efficiencies
-    suffix: _dplus_LHC24g5_LHC24h1
+    suffix: _dplus_LHC24g5_LHC24h1_new
