Updates for D+ and Ds2*+ fractions

--- a/fraction/config_dplus_mb_triggercuts.yml
+++ b/fraction/config_dplus_mb_triggercuts.yml
@@ -1,15 +1,16 @@
 hadron: dplus
 
 input:
-  data: inputs/sparse_dplus_LHC23_trigger.root
-  mc: [inputs/sparse_dplus_LHC24h1_trigger.root]
-  mc_weights: [1.]
+  data: inputs/sparse_dplus_LHC22_LHC23.root
+  mc: [inputs/sparse_dplus_LHC24g5_trackTuner_ptSmearing1p5.root, inputs/sparse_dplus_LHC24h1_trackTuner_ptSmearing1p5.root]
+  corrbkg: [inputs/AO2D_dplus_templates_LHC24k3.root, inputs/AO2D_dplus_templates_LHC24g5.root, inputs/AO2D_dplus_templates_LHC24h1.root]
+  mc_weights: [1., 2.3333]
 
-pt_mins: [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 8.0, 12., 16.]
-pt_maxs: [1.0, 2.0, 3.0, 4.0, 5.0, 8.0, 12., 16., 24.]
+pt_mins: [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16.] 
+pt_maxs: [2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16., 24.] 
 
 bdt_cuts:
-  bkg: 0.04
+  bkg: [0.04, 0.04, 0.04, 0.04, 0.04, 0.04, 0.04, 0.04, 0.04, 0.04, 0.04, 0.04]
   nonprompt: [0.10, 0.12, 0.14, 0.16, 0.18,
               0.20, 0.22, 0.24, 0.26, 0.28,
               0.30, 0.32, 0.34, 0.36, 0.38,
@@ -21,18 +22,19 @@ bdt_cuts:
               0.90, 0.92, 0.94, 0.96, 0.98] # values for cut-variation method (pT differential?)
 
 fit:
-  mass_mins: [1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.75, 1.70, 1.67]
-  mass_maxs: [1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 2.05, 2.15]
-  sgn_funcs: ["gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian"]
-  bkg_funcs: ["chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3", "chebpol3"]
+  mass_mins: [1.76, 1.76, 1.75, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72] 
+  mass_maxs: [1.98, 1.98, 1.98, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00] 
+  sgn_funcs: ["gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian", "gaussian"]
+  bkg_funcs: ["chebpol2", "chebpol2", "chebpol2", "expo", "expo", "expo", "expo", "expo", "expo", "expo", "expo", "expo"]
+  fix_frac_bkgcorr: [True, True, True, False, False, False, False, False, False, True, True, True]
 
 output:
   rawyields:
     directory: rawyields
-    suffix: _dplus_LHC23_trigger
+    suffix: _dplus_LHC22_LHC23
   efficiencies:
     directory: efficiencies
-    suffix: _dplus_LHC24h1_trigger
+    suffix: _dplus_LHC24g5_LHC24h1_trackTuner_ptSmearing1p5
 
 efficiency:
   include_pitomu: True
