Add second bunch of fraction systematics for Ds2*+

--- a/fraction/config_dplus_mb.yml
+++ b/fraction/config_dplus_mb.yml
@@ -2,21 +2,23 @@ hadron: dplus
 
 input:
   data: inputs/sparse_dplus_LHC22_LHC23_BDTAnalysis.root
-  mc: [inputs/sparse_dplus_LHC24h1_trackTuner_ptSmearing1p5_BDTAnalysis.root] #, inputs/sparse_dplus_LHC24g5_trackTuner_ptSmearing1p5_BDTAnalysis.root
+  mc: [inputs/sparse_dplus_LHC24g5_trackTuner_ptSmearing1p5_BDTAnalysis.root, inputs/sparse_dplus_LHC24h1_trackTuner_ptSmearing1p5_BDTAnalysis.root]
   corrbkg: [inputs/AO2D_dplus_templates_LHC24k3.root, inputs/AO2D_dplus_templates_LHC24g5.root, inputs/AO2D_dplus_templates_LHC24h1.root]
   mc_weights: [1., 2.3333] # if only one file ignored
 
 pt_mins: [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16.]
 pt_maxs: [2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10., 12., 16., 24.]
 bdt_cuts:
-  bkg: [0.01, 0.01, 0.02, 0.02, 0.07, 0.07, 0.07, 0.1, 0.1, 0.1, 0.2, 0.3 ]
-  nonprompt: [0.30, 0.34, 0.38,
-              0.40, 0.44, 0.48,
-              0.50, 0.54, 0.58,
-              0.60, 0.64, 0.68,
-              0.70, 0.74, 0.78,
-              0.80, 0.84, 0.88,
-              0.90, 0.94, 0.98] # values for cut-variation method (pT differential?)
+  bkg: [0.01, 0.0115, 0.02, 0.02, 0.07, 0.07, 0.07, 0.1, 0.1, 0.1, 0.17, 0.2 ]
+  nonprompt: [0.10, 0.12, 0.14, 0.16, 0.18,
+              0.20, 0.22, 0.24, 0.26, 0.28,
+              0.30, 0.32, 0.34, 0.36, 0.38,
+              0.40, 0.42, 0.44, 0.46, 0.48,
+              0.50, 0.52, 0.54, 0.56, 0.58,
+              0.60, 0.62, 0.64, 0.66, 0.68,
+              0.70, 0.72, 0.74, 0.76, 0.78,
+              0.80, 0.82, 0.84, 0.86, 0.88,
+              0.90, 0.92, 0.94, 0.96, 0.98] # values for cut-variation method (pT differential?)
 
 fit:
   mass_mins: [1.76, 1.76, 1.75, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72, 1.72] 
@@ -34,4 +36,4 @@ output:
     suffix: _dplus_LHC22_LHC23_BDTAnalysis
   efficiencies:
     directory: efficiencies
-    suffix: _dplus_LHC24h1_trackTuner_ptSmearing1p5_BDTAnalysis
+    suffix: _dplus_LHC24g5_LHC24h1_trackTuner_ptSmearing1p5_BDTAnalysis
